--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,8 +16,12 @@ buildscript {
         google()
         mavenCentral()
     }
+    //Agregadas recientemente
+   
+    //************************ */
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
